<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:text="@string/enter_item"
                android:layout_centerHorizontal="true"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/babyItem"
                android:layout_below="@+id/title"
                android:hint="@string/hint_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_below="@+id/babyItem"
                android:inputType="number"
                android:hint="@string/hint_qnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/itemColor"
                android:layout_below="@+id/itemQuantity"
                android:hint="@string/hint_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/itemSize"
                android:layout_below="@+id/itemColor"
                android:inputType="number"
                android:hint="@string/hint_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:background="@color/colorAccent"
                android:layout_below="@+id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>