<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_goneMarginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/Card_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/item_Date"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_delete" />
            </TableRow>

            <TextView
                android:id="@+id/item_Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:paddingTop="4dp"
                android:text="@string/quantity"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_Size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_Quantity"
                android:paddingTop="4dp"
                android:text="@string/size"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_Color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_Size"
                android:paddingTop="4dp"
                android:text="@string/color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_Color"
                android:paddingTop="4dp"
                android:text="@string/last_updated"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/item_name"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/babyneedsitem"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>

